Safe commit before overleaf goes into maintenance

--- a/0_frontmatter/abstract.tex
+++ b/0_frontmatter/abstract.tex
@@ -3,7 +3,15 @@
 
 
 \begin{abstractslong}    
+Neurosymbolic artificial intelligence comprises a set of design methods for the integration of analogous artificial intelligence models (symbolic and subsymbolic), such that the benefits of both models are combined under a unified framework. For this purpose, multiple neurosymbolic design proposals have been proposed throughout the years. However, these approaches do not address contextual and technical aspects, and do not provide clear guidelines on \textit{how} or \textit{when} neurosymbolic integration is required.
 
+This thesis aims to provide a general design method for neurosymbolic systems, focusing on the integration of knowledge-based systems (symbolic) and deep learning (subsymbolic). The proposed design method extends the previously considered aspects of neurosymbolic integration (limitations and benefits) by including technical and contextual aspects (restrictions and considerations). For each potential interaction between knowledge-based systems and deep learning, a specific interaction design method is formulated where the specific parameters per integration are outlined. Instantiations on the different interaction design methods are provided to assess the viability and applicability of the proposal. This thesis presents the following main contributions:
+\begin{itemize}
+    \item A general design method for the integration of knowledge-based systems and deep learning models.
+    \item A specific design method for each potential interaction between knowledge-based systems and deep learning models. 
+    \item A set of research resources obtained as a result of the instantiation of each integration design method, namely: a semantic-based initialization method for knowledge graph embedding models, a case-based reasoning model powered by deep learning for the generation of medical reports, a multi-agent system for the extraction of behavioral user patterns from opaque personalization systems, and an explainability framework for knowledge graph embedding predictions.
+\end{itemize}
+The versatility and applicability of the proposed design method is validated through its instantiation across several application scenarios. Instantiations based on the proposed design method provide feasible solutions for several open research challenges, thus contributing to advancing the state-of-the-art in those areas.
 \end{abstractslong}
 
 \cleardoublepage
