--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -1,20 +1,24 @@
 \chapter{Introduction}
 \label{chap:intro}
-The Artificial Intelligence (AI) spectrum is vast and complex. The diversity amongst models, as well as its constant evolution, makes it difficult to precisely categorize the existing paradigms. From an input standpoint, two complimentary categories can be identified \citep{lieberman_symbolic_nodate}: symbolic and subsymbolic. The term \textit{symbolic} relates to those models whose input is human-readable and follow an inference process that can be understood by humans, while \textit{subsymbolic} models employ arithmetical representations for data representation and are opaque to the user. \cite{lieberman_symbolic_nodate} highlights the complementarity of both approaches. This general categorization is narrowed in \cite{hopgood_2009_knowledge-based}, where the AI spectrum is divided into knowledge-based systems (symbolic) and computationally intelligent systems (subsymbolic). With the breakthrough of deep learning \citep{raina_2009_gpu,glorot_2014_relu}, this classification is expanded to include these paradigms. 
+The Artificial Intelligence (AI) spectrum is vast and complex. The diversity amongst models, as well as its constant evolution, makes it difficult to precisely categorize the existing paradigms. From an input standpoint, two complimentary categories can be identified \citep{lieberman_symbolic_nodate}: symbolic and subsymbolic. The term \textit{symbolic} relates to those models whose input is human-readable and follow an inference process that can be understood by humans, while \textit{subsymbolic} models employ arithmetical representations for data representation and are opaque to the user. \cite{lieberman_symbolic_nodate} highlights the complementarity of both approaches. This general categorization is narrowed in \cite{hopgood_2009_knowledge-based}, where the AI spectrum is divided into knowledge-based systems (symbolic) and computationally intelligent systems (subsymbolic). With the breakthrough of deep learning \citep{raina_2009_gpu,glorot_2014_relu}, computational intelligent systems are starting to include this paradigm. 
 
-Despite the variety of AI categorizations, the majority of them are founded in the idea of complementarity, which enforces the idea that the combination of antagonistic paradigms leads to new, enhanced approaches that combine the benefits of both elements. This idea is explored in neurosymbolic AI, which describes the set of methods designed for the integration of analogous AI models. Different methods for neurosymbolic system formulation have been proposed throughout the years, depicting the key features that should be exhibited \citep{mcgarry_hybrid_1999}, the criteria on which they should be rooted \citep{mira_neurosymbolic_2004}, or the principles that should be followed \citep{besold_neural-symbolic_2017}. Similar to AI paradigms, neurosymbolic approaches can be also categorized, mostly regarding the coupling degree between the integrated models \citep{medsker2020models,hilario_overview_nodate}.
+Despite the variety of AI categorizations, the majority of them are founded on an existing disjunction between types. Symbolic models use human-readable inputs, and their inference processes can be fully understood and explained by humans. On the contrary, subsymbolic models are based on arithmetical representations and statistical reasoning, thus offering enhanced reasoning capacity at the cost of being opaque to humans. Even though they are generally treated independently, both types present complimentary properties. Therefore, if properly combined, the integration of antagonistic paradigms can lead to new, enhanced approaches that combine the benefits of both. This idea is explored in neurosymbolic AI, which comprises a set of approaches for the integration of complimentary paradigms. Different methods for neurosymbolic system formulation have been proposed throughout the years, depicting the key features that should be exhibited \citep{mcgarry_hybrid_1999}, the criteria on which they should be rooted \citep{mira_neurosymbolic_2004}, or the principles that should be followed \citep{besold_neural-symbolic_2017}. Similar to AI paradigms, neurosymbolic approaches can be also categorized, mostly regarding the coupling degree between the integrated models \citep{medsker2020models,hilario_overview_nodate}.
 
-From a general integration perspective, neurosymbolic approaches can be divided into two main categories: introduction (or insertion)\footnote{The terms ``introduction'' and ``insertion'' are used as synonyms throughout this thesis.}, and extraction. In insertion approaches, the different models are integrated under a unified framework, while in the extraction approaches one of the models is mined (or used to mine) from the other. Both neurosymbolic paradigms are present in a wide variety of tasks and scenarios. 
+Neurosymbolic approaches can be broken down into two main categories from a general integration perspective: introduction (or insertion)\footnote{The terms ``introduction'' and ``insertion'' are used as synonyms throughout this thesis.}, and extraction. Insertion approaches integrate the different models under a unified framework, while in the extraction approaches one of the models is mined (or used to mine) from the other.
 
-Regarding the introductory integration of deep learning and knowledge-based systems, the most prominent combination comprises rules and neural networks \citep{daniele_knowledge_2019,hatzilygeroudis_integrated_2010}. More recently, with the resurfacing of knowledge graphs, these paradigms are starting to gain relevance in this area. Knowledge graph completion \citep{nickel_review_ml_kg_2016,wang_kge_survey_2017} is one of the key challenges regarding knowledge graphs, where the goal is to find new potential elements from the information modelled in the graph. This task is usually performed by knowledge graph embedding models \citep{transe,distmult,crosse}, which are frequently based on deep learning paradigms. 
+Regarding the introductory integration of deep learning (DL) and knowledge-based systems (KBS), the most prominent combination comprises rules and neural networks \citep{daniele_knowledge_2019,hatzilygeroudis_integrated_2010}. More recently, with the resurfacing of knowledge graphs, these paradigms are starting to gain relevance in this area. Knowledge graph completion \citep{nickel_review_ml_kg_2016,wang_kge_survey_2017} is one of the key challenges regarding knowledge graphs, where the goal is to find new potential elements from the information modelled in the graph. This task is usually performed by knowledge graph embedding models \citep{transe,distmult,crosse}, which are frequently based on deep learning. 
 
 Most of the extraction approaches are encompassed in the area of explainable artificial intelligence, whose goal is to extract insights on the inference process of deep learning models. According to \cite{burkart_survey_2021}, AI models should be explainable and exhibit features such as \textit{trust, casualty, transferability,} or \textit{fair and ethical decision making}. These features are not intrinsic to deep learning models, which motivates extensive research on this direction.
 
-The studied neurosymbolic design methods gave a grounding foundation on \textit{why} these methods are benefitial, and which features they should exhibit. However, no insights on \textit{how} these systems should be designs are provided. Therefore, there is a remarkable \textit{absence of guidelines} on the design of neurosymbolic models. Besides the existing motivations for integration, the precise limitations on the paradigms that motivate the need for a neurosymbolic model should be clearly outlined. Contextual and technical aspects should be also considered, such as the task to be performed, the available resources, or the required data types.
+The neurosymbolic design methods existing in the literature give a grounding foundation on \textit{why} the integration is benefitial, and the features that should be exhibited by the final system. However, no insights on \textit{how} these systems should be designed are provided. Therefore, there is a remarkable absence of guidelines on the design of neurosymbolic models. Besides the existing reasons for integration, the precise limitations of the paradigms that motivate the need for a neurosymbolic model should be clearly outlined. Contextual and technical aspects should be also considered, such as the task to be performed, the available resources, or the required data types.
 
-In addition to the theoretical aspects of neurosymbolic system design, there exists a lack of instantiation examples. As previously stated, most of the neurosymbolic systems solely rely on rule-based systems and neural networks. Subsequently, a considerable number of paradigms and potentially successful pairings between knowledge-based systems and deep learning approaches are dismissed. Showcasing the versatility, adaptability, and benefits of neurosymbolic integration across different open research challenges will further motivate its usage, while providing a set of references for their future reuse. 
+In addition to the theoretical aspects of neurosymbolic system design, there exists a lack of instantiation examples. As previously stated, most of the neurosymbolic systems rely on rule-based systems and neural networks. Subsequently, a considerable number of potentially successful pairings between KBS and DL approaches are dismissed. Showcasing the versatility, adaptability, and benefits of neurosymbolic integration across different open research challenges will further motivate its usage, while providing a baseline for their future reuse. 
 
-Considering the previous aspects, the main goal of this thesis is to \textbf{propose a general design method for the integration of knowledge-based systems and deep learning models that comprises theoretical and technical aspects, and that can be instantiated on a wide variety of model pairings and case scenarios.} Therefore, the goal of this thesis is twofold and retaliates on both theoretical and practical aspects. From a theoretical standpoint, the limitations existing in previously existing neurosymbolic design methods are addressed. For this purpose, a general design method is formulated comprising four different dimensions: \textit{limitations, consideration, restrictions} and \textit{benefits}. Therefore, it integrates and extends the previously existing designs, giving a full design frame for the characterization of any possible instance. A specific set of parameters per dimension is devised for each of the potential interactions between knowledge-based systems and deep learning models. Several instances of the proposed design are presented to showcase its versatility and usability. These instances showcase a wide variety of model pairings across different scenarios. Moreover, these instances address existing open research challenges on their specific application domains, subsequently contributing to their resolution and materializing as research contributions of this thesis.
+The research conducted in this thesis stems from the previously stated aspects: the lack of neurosymbolic design guidelines and the limited number of instantation examples. The main goal of this thesis is to propose a general design method for the integration of KBS and DL models that comprises theoretical and technical aspects, and that can be instantiated on a wide variety of model pairings and case scenarios. Therefore, this thesis considers both theoretical and practical aspects of neurosymbolic integration. First, the limitations existing in previous neurosymbolic designs are addressed. In addition to the lack of design guidelines, previous works do not provide a specific insight on the limitations that motivate the need for a neurosymbolic model. A general design method is formulated for this purpose, comprising four different dimensions: \textit{limitations, consideration, restrictions} and \textit{benefits}. Therefore, it integrates and extends the previously existing designs, giving a full design frame for the characterization of any possible instance. According to the two main types of integration (insertion and extraction), four potential interactions between KBS and DL models could be establishing: two insertion interactions and two extraction interactions. However, the extraction of DL models from KBS is not feasible according to the provided definition, as subsymbolic models cannot be mined from their symbolic counterparts. Therefore, the following three interactions are covered in this thesis: KBS insertion into DL models, DL insertion into KBS, and KBS extraction from DL models. A specific design method for each of these interactions is formulated. These specific designs, referred to as interaction design methods, provide a set of parameters for each of the described dimensions that directly address the context and particular features of each interaction.
+
+Another important limitation is the staticity of the roles of symbolic and subsymbolic models. Symbolic paradigms are mostly related to representation tasks, disregarding their application as reasoning models. On the contrary, subsymbolic models are solely used for reasoning. Rule-based systems often portray a symbolic role, with neural networks being the most frequent reasoning paradigm. Therefore, a vast number of potential model interactions are dismissed. Instantiations of each integration design are presented to illustrate the versatility and usability of the proposed general design method. These instances showcase a wide variety of model pairings across different scenarios. Moreover, these instances address existing open research challenges on their specific application domains, subsequently contributing to their resolution. 
+
+In KBS insertion into DL models, a semantic-based initialization for knowledge graph completion is proposed, introducing ontologies into DL-based models. This integration not only improves the performance of the DL model, but accelerates its convergence while reducing the required data. A case-based reasoning model comprising several DL modules for medical document generation is presented in the second interaction (DL insertion into KBS). This framework combines the benefits of case-based reasoning with deep learning models, thus being user-centered and interpretable while providing results that can not be achieved without the inclusion of DL. In the third and final interaction, KBS extraction from DL, two different scenarios are presented, each tackling the problem of explainable AI from a different perspective. In the first scenario, a multi-agent system is devised to extract behavioral patterns from an opaque hyperpersonalization system, giving some insights on the associative patterns established by the system for content targeting. The second scenario continues the work initiated in the first interaction, presenting a framework capable of extracting explanations and insights from DL-based models for knowledge graph completion. 
 %%Contexto
 %%Motivacion
 %%Objetivo general (1p)
@@ -26,9 +30,9 @@ The content presented in this thesis is distributed into seven chapters. Chapter
     
     \item \textit{\textbf{Chapter \ref{chap:methodology}} (Problem Statement, Goals, and Research Methodology)} introduces the research problem attained in this thesis, as well as presenting an overview on the research hypotheses, objectives, assumptions, contributions, and restrictions formulated for its resolution. The followed research methodology is also presented.
     
-    \item \textit{\textbf{Chapter \ref{chap:kbsintegrationdl}} (Knowledge-Based System Introduction into a Deep Learning Models)} explores the first of the covered integrations: the insertion of knowledge-based systems into deep learning models. The design method for this integration is described and instantiated by its application for knowledge graph completion.
+    \item \textit{\textbf{Chapter \ref{chap:kbsintegrationdl}} (Knowledge-Based System Introduction into a Deep Learning Models)} explores the first of the covered integrations: the insertion of knowledge-based systems into deep learning models. The design method for this integration is described and instantiated in the context of knowledge graph completion.
     
-    \item \textit{\textbf{Chapter \ref{chap:dlintegrationkbs}} (Deep Learning Introduction into Knowledge-Based Systems)} presents the second integration: deep learning introduction into knowledge-based systems. The design method for its integration is described and intanstiated for the problem of medical document generation.
+    \item \textit{\textbf{Chapter \ref{chap:dlintegrationkbs}} (Deep Learning Introduction into Knowledge-Based Systems)} presents the second integration: deep learning introduction into knowledge-based systems. The design method for its integration is described and instantiated for the problem of medical document generation.
     
     \item \textit{\textbf{Chapter \ref{chap:kbsextractiondl}} (Knowledge-Based System Extraction from Deep Learning Models)} outlines the third integration: knowledge-based system extraction from deep learning models. The design method for this integration is presented and instantiated on two different application scenarios: behavioral pattern extraction from black-box hyperpersonalization policies and insight and explanation extraction from knowledge graph embedding predictions.
     
