--- a/3_objectives/objectives.tex
+++ b/3_objectives/objectives.tex
@@ -43,8 +43,8 @@ This thesis presents a design method for the representation of each of the three
 \subsection{Research Hypotheses}
 Once the research problem has been described, the following research hypotheses are formulated:
 \begin{enumerate} [start=1,label={\bfseries H\arabic*:}]
-    \item A design method for the integration of knowledge-based systems and deep learning models can be proposed to accurately describe any integration instance. 
-    \item Knowledge-based systems and deep learning models are not antagonistic, but complementary, and their integration can enable the resolution of problems that could not be achieved otherwise.
+    \item A design method for the integration of knowledge-based systems and deep learning models can be proposed to accurately describe most integration instances. 
+    \item Knowledge-based systems and deep learning models are not antagonistic, but complementary, and their integration can facilitate the resolution of several research tasks.
 \end{enumerate}
 
 \subsection{Goals}
