--- a/7_conclusions/conclusions.tex
+++ b/7_conclusions/conclusions.tex
@@ -5,6 +5,8 @@ The final chapter of this thesis addresses the conclusions (Section \ref{7_sec:c
 \section{Conclusions}\label{7_sec:conclusions}
 This thesis provides a set of design methods for the integration of knowledge-based systems and deep learning models according to their interactions from three different perspectives: knowledge-based systems insertion into deep learning models, deep learning model insertion into knowledge-based systems and knowledge-based system extraction from deep learning models. The proposed design methods address several limitations exhibited in previously existing design approaches. Previous approaches set predefined roles for symbolic and subsymbolic models, where the first are used for representation and the later for reasoning. Moreover, the symbolic approaches explored in the literature for integration mostly limit to rule-based systems, with neural networks being the prominent subsymbolic models. This thesis extends the role of symbolic approaches, represented by knowledge-based systems, from purely representation paradigms to reasoning models. In addition, several different paradigm combinations are successfully explored in this thesis, extending the range of possible integrations. The general design method presented in this thesis also considers contextual and technical aspects that were not previously addressed. Therefore, besides presenting the \textit{limitations} on the primary model and the potential \textit{benefits} that motivate the integration, \textit{considerations} on the technical and contextual aspects are formulated to assess the feasibility of the integration. Also, a set of \textit{restrictions} are enunciated to evaluate the correctness of the integration. Three integration design methods are formulated based on the proposed general method, one for each knowledge-based system and deep learning integration covered in this thesis.
 
+%%EXPLICAR DIMENSIONES
+
 An instance of each integration design method is generated to evaluate the applicability of the proposal. Suitable scenarios for the application of each integration design are first detected. The studied application scenarios pose challenges that cannot be overcome with a single model, thus motivating the integration. 
 
 The first instantiation, knowledge-based system insertion into deep learning models, focuses on knowledge graph completion, one of the main areas of neurosymbolic integration. Knowledge graph embedding models, the prominent paradigm of this area, present several limitations including the lack of inference of explicit restrictions and its incapability of reasoning over unseen inputs. These limitations can be addressed with the encoding of ontologies within the knowledge graph embedding model. A semantic-based initialization is formulated that successfully integrates ontological information about the entities within the knowledge graph embedding model, subsequently accelerating the convergence and improving the final results, while doting the model with the capacity of reasoning over unseen inputs.
@@ -80,9 +82,9 @@ Research results were published in journals and conferences under peer evaluatio
 \subsection{Work in Research Projects}
 Prior and during the development of this thesis, the author participated in the following research and innovation:
 \begin{itemize}
-    \item \textit{Un sistema inteligente y autoadaptativo de identidades virtuales para el análisis de redes de publicidad online (DeepAd)} [$1^{st}$ June, 2018 to $31^{st}$ December, 2018]: this project, in collaboration with the company Semminer, served to establish the first limitations from an explainability standpoint regarding black-box hyperpersonalization systems. The results obtained in this project served to motivate further research on this subject, which later served to formulate the design method for knowledge-based system extraction from deep learning models, as well as inspiring the use of multi-agent systems for behavioral pattern extraction from hyperpersonalization policies.
+    \item \textit{Un sistema inteligente y autoadaptativo de identidades virtuales para el análisis de redes de publicidad online (DeepAd)} [$1^{st}$ June, 2018 to $31^{st}$ December, 2018]: this project, in collaboration with the company Dooflow, served to establish the first limitations from an explainability standpoint regarding black-box hyperpersonalization systems. The results obtained in this project served to motivate further research on this subject, which later served to formulate the design method for knowledge-based system extraction from deep learning models, as well as inspiring the use of multi-agent systems for behavioral pattern extraction from hyperpersonalization policies.
     
-    \item \textit{AI4EU: Healthcare Pilot} (GA-825619) [February, 2020 to December, 2021]: this European project served to instantiate the proposed design method for the insertion of deep learning models into a knowledge-based system. This project offered a challenging implementation scenario for the proposed design method, as it was oriented to experts from the medical domain. Therefore, it served to validate the proposed design, as well as providing a real-use implementation case.
+    \item \textit{AI4EU: Healthcare Pilot} (RIA-825619, \url{https://cordis.europa.eu/project/id/825619/es}) [February, 2020 to December, 2021]: this European project, part of the H2020 innitiative, served to instantiate the proposed design method for the insertion of deep learning models into a knowledge-based system. This project offered a challenging implementation scenario for the proposed design method, as it was oriented to experts from the medical domain. Therefore, it served to validate the proposed design, as well as providing a real-use implementation case. 
 \end{itemize}
 \subsection{Software Resources}
 Some of the research results developed throughout this thesis are also available as software resources:
